--- a/Changelog.txt
+++ b/Changelog.txt
@@ -51,6 +51,9 @@ Update 1.2.9
 Update 1.2.10
 1. Stopped using Player.OnlineSharedSettings to pass data between players due to some issues with it. And started using hidden messages.
 
+Update 1.2.11 
+1. Fix display addon icons in room.
+
 
 Plans
 1. Show all reward card, but block acess if player dont have it. And show info how find.
