Beta Add Export/Import buttons and logic.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -70,6 +70,7 @@ Update 1.2.15
 
 Update 1.2.16
 1. Update searcher. Now work by Name, Text and Group.
+2. Add Export/Import buttons and logic.
 
 Plans
 1. Show all reward card, but block acess if player dont have it. And show info how find.
